--- a/dancefloor.html
+++ b/dancefloor.html
@@ -7,12 +7,20 @@
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
     <script src="src/rotatingDancer.js"></script>
+    <script src="src/bananaDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a blinky dancer</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="RotatingDancer">add a rotating dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">
+        add a blinky dancer
+      </a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="RotatingDancer">
+        add a rotating dancer
+      </a>      
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BananaDancer">
+        add a banana dancer
+      </a>
     </div>
     <script src="src/init.js"></script>
   </body>
