Add a lineUpDancers button to have all Dancers line up

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -14,16 +14,19 @@
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">
-        add a blinky dancer
+        Add a blinky dancer
       </a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="RotatingDancer">
-        add a rotating dancer
+        Add a rotating dancer
       </a>      
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BananaDancer">
-        add a banana dancer
+        Add a banana dancer
       </a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="MichaelJackson">
-        add a Michael Jackson
+        Add a Michael Jackson
+      </a>
+      <a href="#" class="lineUpDancers">
+        Line up the dancers!
       </a>
     </div>
     <script src="src/init.js"></script>
