Add test to BananaDancer and MichaelJackson

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -19,6 +19,8 @@
   <script src="src/blinkyDancer.js"></script>
   <script src="spec/michaelJacksonSpec.js"></script>
   <script src="src/michaelJackson.js"></script>
+  <script src="spec/bananaDancerSpec.js"></script>
+  <script src="src/bananaDancer.js"></script>
 </head>
 <body>
 <div id="mocha"></div>
